--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../CSS/style3.css" />
+  <link rel="stylesheet" href="style3.css" />
 </head>
 <body>
    <header role="banner" class="header">
