--- a/lat3.html
+++ b/lat3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Galeri Foto</title>
-    <link rel="stylesheet" style="text/css" href="../CSS/galeri.css">
+    <link rel="stylesheet" style="text/css" href="galeri.css">
 </head>
 <body>
     <header role="banner" class="header">
@@ -33,7 +33,7 @@
                 <div class="card-body">
                     <h2 class="card-title">Pantai Krui</h2>
                     <p class="card-desc">Pantai indah dengan pasir putih dan air laut yang jernih membiru.</p>
-                    <img src="../galeri/krui.jpeg" alt="Pantai Krui"/>
+                    <img src="krui.jpeg" alt="Pantai Krui"/>
                 </div>
             </article>
 
@@ -41,7 +41,7 @@
                 <div class="card-body">
                     <h2 class="card-title">Pantai Mandiri</h2>
                     <p class="card-desc">Pantai indah dengan pasir putih dan air laut yang jernih membiru.</p>
-                    <img src="../galeri/mandiri.jpeg" alt="Pantai Mandiri"/>
+                    <img src="mandiri.jpeg" alt="Pantai Mandiri"/>
                 </div>
             </article>
 
@@ -49,7 +49,7 @@
                 <div class="card-body">
                     <h2 class="card-title">Pantai Danau Ranau</h2>
                     <p class="card-desc">Pantai indah dengan pasir putih dan air laut yang jernih membiru.</p>
-                    <img src="../galeri/danau ranau.jpeg" alt="Pantai Danau Ranau"/>
+                    <img src="danau ranau.jpeg" alt="Pantai Danau Ranau"/>
                 </div>
             </article>
 
@@ -57,7 +57,7 @@
                 <div class="card-body">
                     <h2 class="card-title">Pantai Pesisir</h2>
                     <p class="card-desc">Pantai indah dengan pasir putih dan air laut yang jernih membiru.</p>
-                    <img src="../galeri/pesisir.jpeg" alt="Pantai Pesisir"/>
+                    <img src="pesisir.jpeg" alt="Pantai Pesisir"/>
                 </div>
             </article>
            
