--- a/latihancss10.html
+++ b/latihancss10.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeri Informasi</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <div class="gallery">
         <!-- Card 1 -->
         <div class="card">
-            <img src="../galeri/israel.2jpg.jpeg">
+            <img src="israel.2jpg.jpeg">
             <div class="card-body">
                 <h2>Bagaimana Rudal-rudal Iran Mudah Menjebol Iron Dome Israel?</h2>
                 <p>Iran meluncurkan ratusan rudal sejak 13 Juni sebagai balasan, usai Israel lebih dulu menggempur
@@ -45,7 +45,7 @@
 
         <!-- Card 2 -->
         <div class="card">
-            <img src="../galeri/inspirasi.jpg">
+            <img src="inspirasi.jpg">
             <div class="card-body">
                 <h2>Galeri Soekarno Kecil di Mojokerto, Destinasi Edukasi dan Inspirasi Jejak Sang ProklamatorGaleri
                     Soekarno Kecil di Mojokerto, Destinasi Edukasi dan Inspirasi Jejak Sang Proklamator</h2>
@@ -65,7 +65,7 @@
 
         <!-- Card 3 -->
         <div class="card">
-            <img src="../galeri/as.jpg">
+            <img src="as.jpg">
             <div class="card-body">
                 <h2>Trump Desak Semua Orang Tinggalkan Teheran, AS Akan Ikut Campur Perang Iran-Israel?</h2>
                 <p>Presiden Amerika Serikat (AS) Donald Trump telah mengeluarkan peringatan samar di Truth Social,
@@ -83,7 +83,7 @@
 
         <!-- Card 4 -->
         <div class="card">
-            <img src="../galeri/kriminal.jpg">
+            <img src="kriminal.jpg">
             <div class="card-body">
                 <h2>Kriminal kemarin, penipuan Rihana-Rihani hingga anak mencopet di mal</h2>
                 <p> Direktorat Reserse Kriminal Umum Polda Metro Jaya melakukan penangkapan dan penahanan terhadap
@@ -101,7 +101,7 @@
 
         <!-- Card 5 -->
         <div class="card">
-            <img src="../galeri/artis.jpg">
+            <img src="artis.jpg">
             <div class="card-body">
                 <h2>Deretan Seleb yang Hadir di Intimate Dinner Al Ghazali dan Alyssa Daguise, Tampil dengan Busana
                     Serba Hitam</h2>
@@ -118,7 +118,7 @@
 
         <!-- Card 6 -->
         <div class="card">
-            <img src="../galeri/bencana.jpg">
+            <img src="bencana.jpg">
             <div class="card-body">
                 <h2>Jalan Poros Soppeng-Wajo Amblas Akibat Longsor, Truk Dilarang Lewat</h2>
                 <p>Jalan Poros Soppeng-Wajo di Pallapao, Kabupaten Soppeng, Sulawesi Selatan (Sulsel), mengalami
