--- a/latihancss2.html
+++ b/latihancss2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Deskripsi Diri Sederhana</title>
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header role="banner" class="header">
@@ -20,7 +20,7 @@
     </div>
   </header>
     <h1>Deskripsi Diri</h1>
-    <img src="../galeri/agung.jpg" alt="Foto Profil" />
+    <img src="agung.jpg" alt="Foto Profil" />
 
     <div class="section">
       <p><b>Nama:</b> Agung Prasetyo </p>
