--- a/latihancss3.html
+++ b/latihancss3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Galeri Foto</title>
-   <link rel="stylesheet" href="../CSS/style3.css">
+   <link rel="stylesheet" href="style3.css">
 </head>
 <body>
     <main class="container" role="main" aria-label="Galeri foto">
