--- a/tugasvidio.html
+++ b/tugasvidio.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Galeri Video</title>
-  <link rel="stylesheet" href="../CSS/vidio.css" />
+  <link rel="stylesheet" href="vidio.css" />
 </head>
 <body>
   <header role="banner" class="header">
